# transanno

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  appveyor.yml  prepare-test-files.sh
liftover-rs/: .gitignore  Cargo.toml  prepare-test.sh  prepare-test2.sh  run-additional-test.sh
liftover-rs/src/: defs.rs  error.rs  lib.rs
liftover-rs/src/bedparse/: mod.rs
liftover-rs/src/chain/: before-normalize.chain  mod.rs  test.rs  test2.rs
liftover-rs/src/genelift/: error.rs  mod.rs  test.rs
liftover-rs/src/geneparse/: error.rs  gff3.rs  gtf.rs  mod.rs  refgene.rs
liftover-rs/src/normalize/: mod.rs  normalize-testset.csv  test.rs
liftover-rs/src/poslift/: mod.rs  test.rs  test2.rs
liftover-rs/src/variantlift/: error.rs  lift-test.csv  mod.rs  test.rs
liftover-rs/src/vcflift/: mod.rs  rewrite_record.rs  test.rs
liftover-rs/src/vcflift/testfiles/: mapped-noswap.vcf  mapped-swap.vcf  original.vcf  test-header.vcf
liftover-rs/src/vcfparse/: completerecord.rs  error.rs  mod.rs  partialrecord.rs  reader.rs  test.rs  writer.rs
liftover-rs/testfiles/1000-genomes/: 1kGP-subset.vcf.gz.tbi
liftover-rs/testfiles/GENCODE/: .gitignore  Homo_sapiens.GRCh38.99.ensembl.chr22.gff3.xz  Homo_sapiens.GRCh38.99.ensembl.chr22.gff3.zst  Homo_sapiens.GRCh38.99.ensembl.chr22.gtf.xz  Homo_sapiens.GRCh38.99.ensembl.chr22.gtf.zst  Makefile  gencode.v33.basic.annotation.chr22.gff3.xz  gencode.v33.basic.annotation.chr22.gff3.zst  gencode.v33.basic.annotation.chr22.gtf.xz  gencode.v33.basic.annotation.chr22.gtf.zst  gencode.v33.basic.annotation.chr22.test.regions.gff3  gencode.v33lift37.basic.annotation.chr22.gff3.xz  gencode.v33lift37.basic.annotation.chr22.gff3.zst  gencode.v33lift37.basic.annotation.chr22.gtf.xz  gencode.v33lift37.basic.annotation.chr22.gtf.zst  gencode.v33lift37.basic.annotation.chr22.test.regions.gff3
liftover-rs/testfiles/dbSNP/: .gitignore  Makefile  dbsnp-151-common-GRCh37.chr22.vcf.gz.tbi  dbsnp-151-common-GRCh38.chr22.vcf.gz.tbi
liftover-rs/testfiles/genomes/: .gitignore  Makefile  lift-helper.sh
liftover-rs/testfiles/genomes/GRCh37/: GRCh37.chr22.genome.fa.fai  GRCh37.chr22.revcomp.genome.fa.fai
liftover-rs/testfiles/genomes/GRCh38/: GRCh38.chr22.genome.fa.fai
liftover-rs/testfiles/genomes/chain/: GRCh37-to-GRCh38.chr22.chain  GRCh37-to-GRCh38.chr22.paf  GRCh37-to-GRCh38.over.bed  GRCh37-to-GRCh38.over.sorted.vcf.gz.tbi  GRCh38-to-GRCh37.chr22.chain  GRCh38-to-GRCh37.chr22.paf  GRCh38-to-GRCh37.chr22.revcomp.chain  GRCh38-to-GRCh37.chr22.revcomp.paf  GRCh38-to-GRCh37.over.bed  GRCh38-to-GRCh37.over.sorted.vcf.gz.tbi  GRCh38-to-GRCh37.revcomp.over.bed  (+3 more)
liftover-rs/testfiles/gnomad/: .gitignore  Makefile  gnomad.genomes.r3.0.sites.chr22.aconly.subset.merged.vcf.gz.tbi  gnomad.genomes.r3.0.sites.chr22.aconly.subset.vcf.gz.tbi  gnomad.genomes.r3.0.sites.header.vcf
liftover-rs/testfiles/ucsc-scripts/: create-result-json.py  create-test-regions.py
transanno/: Cargo.toml  build.rs
transanno/ci/: before_deploy.sh
transanno/src/: cli.rs  main.rs  utils.rs
transanno/src/commands/: chain2bedvcf.rs  chain2chunkbed.rs  chain_left_align.rs  generate_completions.rs  liftbed.rs  liftgene.rs  liftvcf.rs  minimap2chain.rs  mod.rs  vcfheader.vcf
transanno/testfiles/: hg38.bed
(+127 files in other folders)
