[package]
name = "transanno"
version = "0.1.3-dev"
authors = ["OKAMURA Yasunobu <okamura@informationsea.info>"]
edition = "2018"
build = "build.rs"

[dependencies]
bio = "0.30"
flate2 = "1"
regex = "1"
lazy_static = "1"
failure = "0.1"
indexmap = "1"
csv = "1"
clap = "2"
pretty_env_logger = "0.3"
log = "0.4"
nom = "5"
autocompress = "0.1"

[build-dependencies]
clap = "2"