[package]
name = "liftover"
version = "0.2.0"
authors = ["OKAMURA, Yasunobu <okamura@informationsea.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.30"
regex = "1"
lazy_static = "1"
indexmap = "1"
csv = "1"
log = "0.4"
nom = "5"
serde = "1"
serde_json = "1"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
flate2 = "1"
serde_json = "1"
autocompress = "0.2"
