[package]
name = "transanno"
version = "0.3.0"
authors = ["OKAMURA Yasunobu <okamura@informationsea.info>"]
edition = "2018"
build = "build.rs"

[dependencies]
bio = "1"
flate2 = "1"
regex = "1"
once_cell = "^1.13.0"
anyhow = "1"
indexmap = "1"
csv = "1"
clap = {version = "4", features = ["derive", "cargo"] }
pretty_env_logger = "0.3"
log = "0.4"
nom = "5"
autocompress = "0.2"
liftover = { path="../liftover-rs", version="0.2.0" }

[build-dependencies]
