[package]
name = "transanno"
version = "0.4.2"
authors = ["OKAMURA Yasunobu <okamura@informationsea.info>"]
edition = "2018"
build = "build.rs"

[dependencies]
bio = "1"
flate2 = "1"
regex = "1"
once_cell = "^1.13.0"
anyhow = "1"
indexmap = "2.0.0"
csv = "1"
clap = { version = "4", features = ["derive", "cargo"] }
pretty_env_logger = "0.5"
log = "0.4"
liftover = { path = "../liftover-rs", version = "0.4.0" }
autocompress = { version = "0.4.1", default-features = false, features = [
    "rayon",
    "bgzip",
    "gzip",
    "xz",
    "zstd",
    "bzip2",
] }

[build-dependencies]
